# etymo

./: Dockerfile  main.py  mkdocs.yml  pyproject.toml
app/: agent.json  config.py  errors.py  main.py  routes.py  schemas.py  service.py  utils.py
docs/: agent-card.md  api.md  faq.md  index.md  quickstart.md
tests/: test_etymo.py
