[project]
name = "etymo"
version = "0.1.0"
description = "An agent that takes in a given word as input and returns the etymology"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.120.3",
    "httpx>=0.28.1",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.22",
    "mkdocs-minify-plugin>=0.8.0",
    "openai>=2.6.1",
    "pydantic>=2.12.3",
    "pymdown-extensions>=10.16.1",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.22",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
]
